--- a/index.html
+++ b/index.html
@@ -4,10 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Priscilla Alves</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <H1>Olá, eu sou a Priscilla Alves</H1>
-    </header>
+    <div class="container">
+        <nav>
+        <ul>
+            <li>
+                <a href="">Sobre mim</a>
+            </li>
+            <li>
+                <a href="https://github.com/perealvees?tab=repositories" target="_blank">Meus projetos</a>
+            </li>
+            <li>
+                <a href="">Contato</a>
+            </li>
+        </ul>
+        </nav>
+        <header>
+            <div class="center"><img src="imagens/profile.jpg" alt=""></div>
+            <h1>Priscilla Alves</h1>
+            <h2>Desevolvedora Web</h2>
+        </header>
+        <main>
+            <section>Sobre mim</section>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem harum facilis esse. Amet minima saepe expedita rem quae, asperiores exercitationem illum praesentium esse molestiae nulla. Facilis commodi inventore debitis voluptate. Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro quae perferendis et sapiente commodi nihil tempore at. Quam vitae earum reprehenderit quibusdam tempore eos obcaecati perferendis tenetur ut? Ullam, sit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad natus recusandae, ullam dolore porro rerum a magnam eum. Ut ratione facere molestias explicabo enim molestiae dolore dolorum incidunt architecto rem.</p><br>
+        
+            <p>Formação</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem harum facilis esse. Amet minima saepe expedita rem quae, asperiores exercitationem illum praesentium esse molestiae nulla. Facilis commodi inventore debitis voluptate. Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro quae perferendis et sapiente commodi nihil tempore at. Quam vitae earum reprehenderit quibusdam tempore eos obcaecati perferendis tenetur ut? Ullam, sit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad natus recusandae, ullam dolore porro rerum a magnam eum. Ut ratione facere molestias explicabo enim molestiae dolore dolorum incidunt architecto rem.</p><br>
+            <p>Cursos</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem harum facilis esse. Amet minima saepe expedita rem quae, asperiores exercitationem illum praesentium esse molestiae nulla. Facilis commodi inventore debitis voluptate. Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro quae perferendis et sapiente commodi nihil tempore at. Quam vitae earum reprehenderit quibusdam tempore eos obcaecati perferendis tenetur ut? Ullam, sit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad natus recusandae, ullam dolore porro rerum a magnam eum. Ut ratione facere molestias explicabo enim molestiae dolore dolorum incidunt architecto rem.</p><br>
+        </section>
+        </main>
+    </div>
 </body>
 </html>
