ajuste de texto

--- a/index.html
+++ b/index.html
@@ -7,44 +7,44 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav>
-        <ul>
-            <li>
-                <a href="https://www.linkedin.com/in/devpriscillaalves/" target="_blank"><img class="linkedin" src="https://w7.pngwing.com/pngs/936/178/png-transparent-linkedin-social-media-computer-icons-youtube-logo-round-material-blue-text-trademark-thumbnail.png" alt=""> ME SIGA NO LINKEDIN</a>
-            </li>
-            <li>
-                <a href="https://github.com/perealvees?tab=repositories" target="_blank"><img class="git" src="https://w7.pngwing.com/pngs/115/663/png-transparent-github-computer-icons-directory-github-mammal-cat-like-mammal-carnivoran-thumbnail.png" alt=""> MEUS PROJETOS NO GITHUB</a>
-            </li>
-            <li>
-                <a href="https://www.instagram.com/perealvees/" target="_blank"><img class="insta" src="https://w7.pngwing.com/pngs/750/461/png-transparent-instagram-application-logo-logo-computer-icons-instagram-miscellaneous-text-trademark-thumbnail.png" alt=""> MEU INSTAGRAM</a>
-            </li>
-        </ul>
-    </nav>
-    <header>
-        <div class="center"><img src="imagens/garden.jpg" alt=""></div>
-        <h1>Priscilla Alves</h1>
-        <h2>Desenvolvedora de Software</h2><br>
-
-    </header>
-    <main>
-        <section>
-            <h3>Sobre mim</h3>
-            <p>Com 32 anos, atualmente moro em Piraquara (região metropolitana de Curitiba). Vivo com minha mãe e meu padrasto <br>
-            Gosto de tocar violão e sou bem eclética pra música. Não gosto de novelas, por outro lado assisto muito filmes e séries. <br>
-            Não poderia deixar de falar que tenho um casal de cachorros: O Theobaldo, um lord senhorzinho de 14 anos e sua companheira Theodora, uma jovem idosa que acha que é uma adolescente, mas ja beira os 12 anos também. </p>
-
-        </section>
-        <section>
-            <h3>Formação</h3>
-            <p>Hoje tenho duas formações: Em Analise e Desenvolvimento de Sistemas, na faculdade Estácio de Sá, que conclui em 2023 e Gestão de Recursos Humanos na universidade Campus de Andrade, no qual graduei em 2020</p>
-        </section>
-        <section>
-            <h3>Cursos</h3>
-            <p>Procuro sempre aprender um pouquinho sobre tudo dentro da area tecnologia.<br>
-               Realizei cursos de HTML, CSS, Python, VBA e um breve contato com SQL. 
-            </p>
-        </section>
-    </main>
+    <div class="centralizar">
+        <nav>
+            <ul>
+                <li>
+                    <a href="https://www.linkedin.com/in/devpriscillaalves/" target="_blank"><img class="linkedin" src="https://w7.pngwing.com/pngs/936/178/png-transparent-linkedin-social-media-computer-icons-youtube-logo-round-material-blue-text-trademark-thumbnail.png" alt=""> ME SIGA NO LINKEDIN</a>
+                </li>
+                <li>
+                    <a href="https://github.com/perealvees?tab=repositories" target="_blank"><img class="git" src="https://w7.pngwing.com/pngs/115/663/png-transparent-github-computer-icons-directory-github-mammal-cat-like-mammal-carnivoran-thumbnail.png" alt=""> MEUS PROJETOS NO GITHUB</a>
+                </li>
+                <li>
+                    <a href="https://www.instagram.com/perealvees/" target="_blank"><img class="insta" src="https://w7.pngwing.com/pngs/750/461/png-transparent-instagram-application-logo-logo-computer-icons-instagram-miscellaneous-text-trademark-thumbnail.png" alt=""> MEU INSTAGRAM</a>
+                </li>
+            </ul>
+        </nav>
+        <header>
+            <div class="center"><img src="imagens/garden.jpg" alt=""></div>
+            <h1>Priscilla Alves</h1>
+            <h2>Desenvolvedora de Software</h2><br>
+        </header>
+        <main>
+            <section>
+                <h3>Sobre mim</h3>
+                    <p>Com 32 anos, atualmente moro em Piraquara (região metropolitana de Curitiba). Vivo com minha mãe e meu padrasto. <br>
+                    Gosto de tocar violão e sou bem eclética pra música. Não gosto de novelas, por outro lado assisto muito filmes e séries. <br>
+                    Tenho um casal de cachorros: O Theobaldo, um lord senhorzinho de 14 anos e sua companheira Theodora, uma jovem idosa que acha que é uma adolescente, mas ja beira os 12 anos também. </p>
+            </section>
+            <section>
+                <h3>Formação</h3>
+                <p>Hoje tenho duas formações: Em Analise e Desenvolvimento de Sistemas, na faculdade Estácio de Sá, que conclui em 2023 e Gestão de Recursos Humanos, na universidade Campus de Andrade, na qual graduei em 2020.</p>
+            </section>
+            <section>
+                <h3>Cursos</h3>
+                <p>Procuro sempre aprender um pouquinho sobre tudo dentro da area tecnologia.<br>
+                   Realizei cursos de HTML, CSS, Python, VBA e um breve contato com SQL.
+                </p>
+            </section>
+        </main>
+    </div>
 
 </body>
 </html>
